2006-06-04 svu

	* libxklavier/xklavier_props.c: fixed default options handling,
	the gchar** array changed from NULL to g_new0( char*, 1)

2006-05-20 svu

	* configure.in,
	libxklavier/Makefile.am,
	libxklavier/xklavier_config_xkb.c,
	libxklavier/xklavier_dump.c,
	libxklavier/xklavier_evt_xkb.c,
	libxklavier/xklavier_private_xkb.h,
	libxklavier/xklavier_xkb.c: xkb_headers -> libxkbfile,
	linking to xkbfile is also optional. 
	Thanks to Thomas Vander Stichele

2006-04-30 svu

	* autogen.sh: fail on autoconf/automake errors,
	thanks to Thomas Stichele

2006-04-22 svu

	* libxklavier/*.c:
	* tests/*.c: fixing gcc 2.95 compilation,
	thanks to Jens Granseuer

2006-04-18 svu

	* NEWS: preparing 2.91

2006-04-12 svu

	* libxklavier/xklavier_config.c,
	libxklavier/xklavier_config_xkb.c,
	libxklavier/xklavier_evt.c,
	libxklavier/xklavier_evt_xmm.c,
	libxklavier/xklavier_private.h,
	libxklavier/xklavier_props.c: syncing with 2.x fixes

2006-03-12 svu
	
	* everything: branching 2.x series, merging GLIBing branch to HEAD

2006-03-12 svu
	
	* everything: branching 2.x series, merging GLIBing branch to HEAD

2006-03-12 svu
	
	* everything: branching 2.x series, merging GLIBing branch to HEAD

2006-03-12 svu
	
	* everything: branching 2.x series, merging GLIBing branch to HEAD

2006-02-14 svu
	
	* libxklavier/xklavier.c, libxklavier/xklavier_evt.c: hopefully fixing
	the crash on SetTransparent

2006-01-16 svu
	
	* libxklavier/xklavier_config.c: handling XML comments

2005-12-26 svu
	
	* configure.in, libxklavier/xklavier_config_xkb.c: adding XKB_BIN_BASE,
	closing https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=174361

2005-12-10 svu
	
	* NEWS: update for 2.1

2005-12-03 svu
	
	* libxklavier/xklavier_config_xkb.c:
	wait -> waitpid, fixed http://bugzilla.gnome.org/show_bug.cgi?id=322955

2005-09-22 svu
	
	* libxklavier/xklavier_config_xkb.c:
	don't remove tmp files on debug level >= 500

2005-05-29 svu
	
	* libxklavier/xklavier.c,
	libxklavier/xklavier.h,