@@ -75,6 +75,13 @@ AC_ARG_WITH( xkb_default_ruleset,
 
 AC_DEFINE_UNQUOTED(XKB_DEFAULT_RULESET,"${xkb_default_ruleset}",Default XKB set of rules)
 
+AC_ARG_WITH( xmodmap_default_ruleset,
+             [  --with-xmodmap-default-ruleset=RULES        Xmodmap default set of rules (by default it is base)],
+             xmodmap_default_ruleset="$withval", 
+             xmodmap_default_ruleset="base" )
+
+AC_DEFINE_UNQUOTED(XMODMAP_DEFAULT_RULESET,"${xmodmap_default_ruleset}",Default Xmodmap set of rules)
+
 AC_ARG_WITH( xmodmap_base,
              [  --with-xmodmap-base=DIR        xmodmap base path (by default it is /usr/share/xmodmap)],
              xmodmap_base="$withval", 
@@ -108,16 +115,16 @@ AC_ARG_ENABLE(xkb-support,
 
 AM_CONDITIONAL(ENABLE_XKB_SUPPORT, test "$enable_xkb_support" = "yes")
 
-AC_ARG_ENABLE(xmm-support, 
-[  --enable-xmm-support       Enable xmodmap support],
-, enable_xmm_support=yes)
+AC_ARG_ENABLE(xmodmap-support, 
+[  --enable-xmodmap-support       Enable xmodmap support],
+, enable_xmodmap_support=yes)
 
-AM_CONDITIONAL(ENABLE_XMM_SUPPORT, test "$enable_xmm_support" = "yes")
+AM_CONDITIONAL(ENABLE_XMODMAP_SUPPORT, test "$enable_xmodmap_support" = "yes")
 
 AC_MSG_CHECKING(whether at least one libxklavier backend is enabled)
 if test \( "$enable_xkb_support" == "yes" -a \
           "$libxkbfile_present" == "yes" \) -o \
-        "$enable_xmm_support" == "yes" ; then
+        "$enable_xmodmap_support" == "yes" ; then
   AC_MSG_RESULT(yes)
 else
   AC_MSG_RESULT(no)
@@ -152,12 +159,15 @@ echo '**********************************************************'
 echo '  Libxklavier is configured with the following backends:'
 if test "$enable_xkb_support" == "yes" ; then
   if test "$libxkbfile_present" == "yes" ; then
-    echo '    XKB (libxkbfile is present)'
+    echo "    XKB, libxkbfile is present"
+    echo "         default ruleset: $xkb_default_ruleset"
+    echo "         base: $xkb_base"
   else
-    echo '    XKB (but libxkbfile is NOT present)'
+    echo "    XKB, libxkbfile is NOT present"
   fi
 fi
-if test "$enable_xmm_support" == "yes" ; then
-  echo '    xmodmap'
+if test "$enable_xmodmap_support" == "yes" ; then
+  echo "    xmodmap, default ruleset: $xmodmap_default_ruleset"
+  echo "             base: $xmodmap_base"
 fi
 echo '**********************************************************'
