@@ -9,10 +9,10 @@ else
   ENABLE_XKB_SUPPORT_CFLAG = -DDISABLE_XKB_SUPPORT=1
 endif
 
-if ENABLE_XMM_SUPPORT
-  ENABLE_XMM_SUPPORT_CFLAG = -DENABLE_XMM_SUPPORT=1
+if ENABLE_XMODMAP_SUPPORT
+  ENABLE_XMODMAP_SUPPORT_CFLAG = -DENABLE_XMODMAP_SUPPORT=1
 else
-  ENABLE_XMM_SUPPORT_CFLAG = -DDISABLE_XMM_SUPPORT=1
+  ENABLE_XMODMAP_SUPPORT_CFLAG = -DDISABLE_XMODMAP_SUPPORT=1
 endif
 
 EXTRA_DIST=marshal.list
@@ -30,7 +30,7 @@ AM_CFLAGS=-Wall -Werror -DDATA_DIR=\"$(datadir)/$(PACKAGE)\" \
   $(XML_CFLAGS) $(GLIB_CFLAGS) \
   $(LIBXKBFILE_PRESENT_CFLAG) \
   $(ENABLE_XKB_SUPPORT_CFLAG) \
-  $(ENABLE_XMM_SUPPORT_CFLAG)
+  $(ENABLE_XMODMAP_SUPPORT_CFLAG)
 
 lib_LTLIBRARIES = libxklavier.la
 noinst_HEADERS = xklavier_private.h xklavier_private_xkb.h xklavier_private_xmm.h
