@@ -1,3 +1,9 @@
+2006-06-30 svu
+
+	* libxklavier/xklavier.c, libxklavier/xklavier_config_xmm.c,
+	libxklavier/Makefile.am, configure.in: Small fix for xmodmap,
+	configure script gives more info about the configuration, at the end.
+
 2006-06-04 svu
 
 	* libxklavier/xklavier_props.c: fixed default options handling,
